test/Fail/Issue4461.err
Issue4461.agda:3,3-4: error: [UnequalLevel]
Agda.Primitive.lzero != Agda.Primitive.lsuc _7
when checking that the type _4 of an argument to the constructor m
fits in the sort Set of the datatype.
